--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,8 @@ jobs:
         run: echo $GOOGLE_SERVICES_JSON | base64 --decode >./app/google-services.json
       - name: Decode and Write Secrets
         env:
-          SERVER_CLIENT_ID: ${{ secrets.SERVER_CLIENT_ID }}
-        run: echo $SERVER_CLIENT_ID | base64 --decode >./modules/account/src/main/res/values/secrets.xml
+          SECRETS_XML: ${{ secrets. SECRETS_XML }}
+        run: echo $SECRETS_XML | base64 --decode >./modules/account/src/main/res/values/secrets.xml
       - name: Setup keystore file
         env:
           KEY_STORE: ${{ secrets.KEY_STORE }}
