--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ on:
   push:
     branches:
       - main
+      - feature/deployemnt
   workflow_dispatch:
     inputs:
       environment:
@@ -50,7 +51,8 @@ jobs:
         id: determineenvironment
         run: |
           if [[ -z "${{ inputs.environment }}" ]]; then
-            echo "environment=staging" >> $GITHUB_OUTPUT
+#           echo "environment=staging" >> $GITHUB_OUTPUT
+            echo "environment=internal" >> $GITHUB_OUTPUT
           else
             echo "environment=${{ inputs.environment }}" >> $GITHUB_OUTPUT
           fi
@@ -65,13 +67,13 @@ jobs:
       - run: |
           echo "Injecting Environment Variables In Deployment Workflow:"
           echo "appidentifier: ${{ vars.APP_IDENTIFIER }}"
-  buildtestandanalyze:
-    uses: ./.github/workflows/build-test-analyze.yml
-    secrets: inherit
+  # buildtestandanalyze:
+  #   uses: ./.github/workflows/build-test-analyze.yml
+  #   secrets: inherit
   googleplayinternal:
     name: Upload App to Google Play - Internal
     runs-on: ubuntu-latest
-    needs: buildtestandanalyze
+    # needs: buildtestandanalyze
     environment: ${{ needs.determineenvironment.outputs.environment }}
     steps:
       - name: Checkout code
