--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,6 +73,7 @@ jobs:
     name: Upload App to Google Play - Internal
     runs-on: ubuntu-latest
     # needs: buildtestandanalyze
+    needs: [determineenvironment, vars]
     environment: ${{ needs.determineenvironment.outputs.environment }}
     steps:
       - name: Checkout code
