--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,7 +6,7 @@
 # SPDX-License-Identifier: MIT
 #
 
-name: Main
+name: Deployment
 
 on:
   push:
@@ -24,6 +24,11 @@ on:
           - internal
           - staging
           - production
+      version:
+        description: |
+          The semantic version of the app that should be released.
+        required: true
+        type: string
   workflow_call:
     inputs:
       environment:
@@ -31,7 +36,12 @@ on:
           The GitHub deployment environment.
         required: false
         type: string
-        default: internal
+        default: staging
+      version:
+        description: |
+          The semantic version of the app that should be released.
+        required: true
+        type: string
 
 concurrency:
   group: main
@@ -50,7 +60,7 @@ jobs:
         id: determineenvironment
         run: |
           if [[ -z "${{ inputs.environment }}" ]]; then
-            echo "environment=internal" >> $GITHUB_OUTPUT
+            echo "environment=staging" >> $GITHUB_OUTPUT
           else
             echo "environment=${{ inputs.environment }}" >> $GITHUB_OUTPUT
           fi
@@ -61,15 +71,23 @@ jobs:
     environment: ${{ needs.determineenvironment.outputs.environment }}
     outputs:
       appidentifier: ${{ vars.APP_IDENTIFIER }}
+      version: ${{ steps.vars.outputs.version }}
     steps:
+      - uses: actions-ecosystem/action-get-latest-tag@v1
+        id: get-latest-tag
       - run: |
           echo "Injecting Environment Variables In Deployment Workflow:"
           echo "appidentifier: ${{ vars.APP_IDENTIFIER }}"
+          if [[ -z "${{ inputs.version }}" ]]; then
+            echo "version=${{ steps.get-latest-tag.outputs.tag }}" >> $GITHUB_OUTPUT
+          else
+            echo "version=${{ inputs.version }}" >> $GITHUB_OUTPUT
+          fi
   buildtestandanalyze:
     uses: ./.github/workflows/build-test-analyze.yml
     secrets: inherit
   googleplayinternal:
-    name: Upload App to Google Play - Internal
+    name: Upload App to Google Play
     runs-on: ubuntu-latest
     needs: [buildtestandanalyze, determineenvironment, vars]
     environment: ${{ needs.determineenvironment.outputs.environment }}
@@ -105,4 +123,4 @@ jobs:
           KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
           KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           SERVICE_ACCOUNT_JSON_KEY: ${{ secrets.SERVICE_ACCOUNT_JSON_KEY }}
-        run: bundle exec fastlane internal environment:"${{ needs.determineenvironment.outputs.environment }}" applicationid:"${{ needs.vars.outputs.appidentifier }}"
+        run: bundle exec fastlane internal environment:"${{ needs.determineenvironment.outputs.environment }}" applicationid:"${{ needs.vars.outputs.appidentifier }}" versionname:"${{ needs.vars.outputs.version }}"
