switch toasting in main thread and notify whenever no pdf reader installed in the device

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,4 +35,12 @@
         </provider>
     </application>
 
+    <queries>
+        <!-- Intent query to open PDF files -->
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <data android:mimeType="application/pdf" />
+        </intent>
+    </queries>
+
 </manifest>
