--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -75,6 +75,9 @@ jobs:
         uses: actions/checkout@v4
       - uses: actions-ecosystem/action-get-latest-tag@v1
         id: get-latest-tag
+        with:
+          semver_only: true
+          initial_version: "2.0.0"
       - run: |
           echo "Injecting Environment Variables In Deployment Workflow:"
           echo "appidentifier: ${{ vars.APP_IDENTIFIER }}"
