--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -57,10 +57,13 @@ jobs:
       - name: Determine Environment
         id: determineenvironment
         run: |
+          echo "Determining the Environment ..."
           if [[ -z "${{ inputs.environment }}" ]]; then
             echo "environment=staging" >> $GITHUB_OUTPUT
+            echo "environment: staging"
           else
             echo "environment=${{ inputs.environment }}" >> $GITHUB_OUTPUT
+            echo "environment: ${{ inputs.environment }}"
           fi
   vars:
     name: Inject Environment Variables In Deployment Workflow
@@ -79,12 +82,14 @@ jobs:
           semver_only: true
           initial_version: "2.0.0"
       - run: |
-          echo "Injecting Environment Variables In Deployment Workflow:"
+          echo "Injecting Environment Variables In Deployment Workflow ..."
           echo "appidentifier: ${{ vars.APP_IDENTIFIER }}"
           if [[ -z "${{ inputs.version }}" ]]; then
             echo "version=${{ steps.get-latest-tag.outputs.tag }}" >> $GITHUB_OUTPUT
+            echo "version: ${{ steps.get-latest-tag.outputs.tag }}"
           else
             echo "version=${{ inputs.version }}" >> $GITHUB_OUTPUT
+            echo "version: ${{ inputs.version }}"
           fi
   buildtestandanalyze:
     uses: ./.github/workflows/build-test-analyze.yml
