--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -42,6 +42,7 @@ kotlinxSerializationJson = "1.6.3"
 kspVersion = "2.0.0-1.0.21"
 lifecycleKtx = "2.8.2"
 lifecycleRuntimeKtx = "2.7.0"
+markdown = "0.1.45"
 minSdk = "31"
 mockKVersion = "1.13.10"
 playServicesAuth = "21.2.0"
@@ -114,6 +115,7 @@ hilt-test-compiler = { group = "com.google.dagger", name = "hilt-android-compile
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 kotlin-gradle = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
+markdown = { group = "org.jetbrains", name = "markdown", version.ref = "markdown" }
 mockk-agent-core = { group = "io.mockk", name = "mockk-agent", version.ref = "mockKVersion" }
 mockk-agent-jvm = { group = "io.mockk", name = "mockk-agent-jvm", version.ref = "mockKVersion" }
 mockk-android = { group = "io.mockk", name = "mockk-android", version.ref = "mockKVersion" }
