--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+
+
     <application
         android:name=".MainApplication"
         android:allowBackup="true"
@@ -11,7 +13,9 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Spezi.SplashScreen">
+        android:theme="@style/Theme.Spezi.SplashScreen"
+        android:extractNativeLibs="true"
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
