--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,12 +2,12 @@
 [versions]
 accompanistPager = "0.35.1-alpha"
 activityCompose = "1.9.0"
-agp = "8.5.0"
+agp = "8.9.1"
 androidTools = "31.5.0"
 androidyoutubeplayer-core = "12.1.0"
 appcompat = "1.7.0"
 coilCompose = "2.6.0"
-compileSdk = "34"
+compileSdk = "35"
 composeBom = "2024.06.00"
 composeNavigation = "2.8.0-beta03"
 coreI18n = "1.0.0-alpha01"
@@ -35,6 +35,13 @@ guava = "32.1.3-android" # is a fixed version which works with all other depende
 healthConnectClient = "1.1.0-alpha07"
 hiltNavigation = "1.2.0"
 hiltVersion = "2.51"
+inkAuthoring = "1.0.0-alpha01"
+inkBrush = "1.0.0-alpha01"
+inkCore = "1.0.0-alpha02"
+inkGeometry = "1.0.0-alpha01"
+inkNativeloader = "1.0.0-alpha01"
+inkRendering = "1.0.0-alpha01"
+inkStrokes = "1.0.0-alpha01"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 kotlin = "2.0.0"
@@ -50,12 +57,16 @@ rulesVersion = "1.5.0"
 runnerVersion = "1.5.2"
 securityCryptoKtx = "1.1.0-alpha06"
 splashScreenVersion = "1.0.1"
-targetSdk = "34"
+targetSdk = "35"
 testCoreVersion = "1.5.0"
 timberVersion = "5.0.1"
 truth = "1.4.2"
 vico = "2.0.0-alpha.26"
 zxingVersion = "3.5.0"
+inkAuthoringAndroid = "1.0.0-alpha04"
+inputMotionprediction = "1.0.0-beta05"
+inkStrokesAndroid = "1.0.0-alpha04"
+digitalInkRecognition = "18.1.0"
 
 # Please keep [libraries] block sorted. Select all items and in Android Studio `Edit > Sort Lines`
 [libraries]
@@ -74,6 +85,13 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
 androidx-fragment-compose = { module = "androidx.fragment:fragment-compose", version.ref = "fragmentCompose" }
 androidx-health-connect-client = { module = "androidx.health.connect:connect-client", version.ref = "healthConnectClient" }
+androidx-ink-authoring = { module = "androidx.ink:ink-authoring", version.ref = "inkAuthoring" }
+androidx-ink-core = { module = "androidx.ink:ink-core", version.ref = "inkCore" }
+androidx-ink-geometry = { module = "androidx.ink:ink-geometry", version.ref = "inkGeometry" }
+androidx-ink-brush = { module = "androidx.ink:ink-brush", version.ref = "inkBrush" }
+androidx-ink-rendering = { module = "androidx.ink:ink-rendering", version.ref = "inkRendering" }
+androidx-ink-nativeloader = { module = "androidx.ink:ink-nativeloader", version.ref = "inkNativeloader" }
+androidx-ink-strokes = { module = "androidx.ink:ink-strokes", version.ref = "inkStrokes" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleKtx" }
 androidx-lifecycle-view-model-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "lifecycleKtx" }
@@ -126,6 +144,10 @@ play-services-auth = { group = "com.google.android.gms", name = "play-services-a
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timberVersion" }
 vico-compose-m3 = { group = "com.patrykandpatrick.vico", name = "compose-m3", version.ref = "vico" }
 zxing-core = { group = "com.google.zxing", name = "core", version.ref = "zxingVersion" }
+androidx-ink-authoring-android = { group = "androidx.ink", name = "ink-authoring-android", version.ref = "inkAuthoringAndroid" }
+androidx-input-motionprediction = { group = "androidx.input", name = "input-motionprediction", version.ref = "inputMotionprediction" }
+androidx-ink-strokes-android = { group = "androidx.ink", name = "ink-strokes-android", version.ref = "inkStrokesAndroid" }
+digital-ink-recognition = { group = "com.google.mlkit", name = "digital-ink-recognition", version.ref = "digitalInkRecognition" }
 
 # Please keep [plugins] block sorted. Select all items and in Android Studio `Edit > Sort Lines`
 [plugins]
