--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,11 @@
 # Please keep [versions] block sorted. Select all items and in Android Studio `Edit > Sort Lines`
 [versions]
-accompanistPager = "0.35.1-alpha"
-activityCompose = "1.9.0"
-agp = "8.5.0"
-androidTools = "31.5.0"
-androidyoutubeplayer-core = "12.1.0"
+activityCompose = "1.11.0"
+agp = "8.13.0"
+androidTools = "31.13.0"
 appcompat = "1.7.0"
 coilCompose = "2.6.0"
-compileSdk = "34"
+compileSdk = "36"
 composeBom = "2024.06.00"
 composeNavigation = "2.8.0-beta03"
 coreI18n = "1.0.0-alpha01"
@@ -16,7 +14,6 @@ coreKtxVersion = "1.5.0"
 coreTestingVersion = "2.2.0"
 coroutinesVersion = "1.8.0"
 credentialsPlayServicesAuth = "1.2.2"
-datastorePreferences = "1.1.1"
 detekt = "1.23.6" # please adjust github action version as well in case of version change
 dokka = "1.9.20"
 espressoCore = "3.5.1"
@@ -34,32 +31,27 @@ gson = "2.11.0"
 guava = "32.1.3-android" # is a fixed version which works with all other dependencies
 healthConnectClient = "1.1.0-alpha07"
 hiltNavigation = "1.2.0"
-hiltVersion = "2.51"
+hiltVersion = "2.57.2"
 junit = "4.13.2"
 junitVersion = "1.1.5"
-kotlin = "2.0.0"
+kotlin = "2.1.21" # latest kotlin version that we can support due to this ksp issue: https://github.com/google/ksp/issues/2463
 kotlinxSerializationJson = "1.6.3"
-kspVersion = "2.0.0-1.0.21"
+kspVersion = "2.1.21-2.0.1" # should align version with kotlin, see kotlin = "2.1.21"
 lifecycleKtx = "2.8.2"
 lifecycleRuntimeKtx = "2.7.0"
 minSdk = "31"
 mockKVersion = "1.13.10"
-phoneNumberVersion = "8.13.21"
 playServicesAuth = "21.2.0"
 rulesVersion = "1.5.0"
 runnerVersion = "1.5.2"
 securityCryptoKtx = "1.1.0-alpha06"
 splashScreenVersion = "1.0.1"
-targetSdk = "34"
 testCoreVersion = "1.5.0"
 timberVersion = "5.0.1"
 truth = "1.4.2"
-vico = "2.0.0-alpha.26"
-zxingVersion = "3.5.0"
 
 # Please keep [libraries] block sorted. Select all items and in Android Studio `Edit > Sort Lines`
 [libraries]
-accompanist-pager = { module = "com.google.accompanist:accompanist-pager", version.ref = "accompanistPager" }
 android-fhir-data-capture = { module = "com.google.android.fhir:data-capture", version.ref = "fhirDataCapture" }
 android-gradle = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
 android-tools-common = { group = "com.android.tools", name = "common", version.ref = "androidTools" }
@@ -69,7 +61,6 @@ androidx-core-i18n = { group = "androidx.core", name = "core-i18n", version.ref 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-testing = { group = "androidx.arch.core", name = "core-testing", version.ref = "coreTestingVersion" }
 androidx-credentials-play-services-auth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentialsPlayServicesAuth" }
-androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "foundation" }
 androidx-fragment-compose = { module = "androidx.fragment:fragment-compose", version.ref = "fragmentCompose" }
@@ -82,7 +73,6 @@ androidx-splashscreen = { group = "androidx.core", name = "core-splashscreen", v
 androidx-test-core = { group = "androidx.test", name = "core", version.ref = "testCoreVersion" }
 androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "rulesVersion" }
 androidx-test-runner = { group = "androidx.test", name = "runner", version.ref = "runnerVersion" }
-androidyoutubeplayer-core = { module = "com.pierfrancescosoffritti.androidyoutubeplayer:core", version.ref = "androidyoutubeplayer-core" }
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 compose-material3 = { group = "androidx.compose.material3", name = "material3" }
@@ -103,7 +93,6 @@ firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-fires
 firebase-functions-ktx = { group = "com.google.firebase", name = "firebase-functions-ktx", version.ref = "firebaseFunctionsKtx" }
 firebase-messaging-ktx = { module = "com.google.firebase:firebase-messaging-ktx", version.ref = "firebaseMessagingKtx" }
 firebase-storage-ktx = { group = "com.google.firebase", name = "firebase-storage-ktx", version.ref = "firebaseStorageKtx" }
-googlecode-phonenumber = { module = "com.googlecode.libphonenumber:libphonenumber", version.ref = "phoneNumberVersion" }
 google-truth = { group = "com.google.truth", name = "truth", version.ref = "truth" }
 googleid = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleid" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
@@ -125,8 +114,6 @@ mockk-core = { group = "io.mockk", name = "mockk", version.ref = "mockKVersion" 
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "composeNavigation" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServicesAuth" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timberVersion" }
-vico-compose-m3 = { group = "com.patrykandpatrick.vico", name = "compose-m3", version.ref = "vico" }
-zxing-core = { group = "com.google.zxing", name = "core", version.ref = "zxingVersion" }
 
 # Please keep [plugins] block sorted. Select all items and in Android Studio `Edit > Sort Lines`
 [plugins]
