update firebase and other dependencies

--- a/testing-ui/src/main/AndroidManifest.xml
+++ b/testing-ui/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     <application>
         <activity
             android:name="edu.stanford.spezi.testing.ui.ComposeContentActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
             android:exported="true"  />
     </application>
 </manifest>
